--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 #mainNav {
 	background-color: #2d3538;
+  position: fixed;
 	width: 50%;
 	height: 100%;
 	padding: 40px 0px;
 }
-.navegador ul {
+.nav ul {
 	position: relative;
-	top: -20px;
+	bottom: 310px;
 	width: 100%;
 	font-size: 30px;
 }
@@ -23,7 +24,7 @@
 	text-decoration: none;
 }
 #aboutMe {
-	padding: 60px 0px;
+	padding: 20% 0;
 }
 #aboutMe p {
 	line-height: 1.8;
@@ -31,26 +32,34 @@
 	padding: 10px 50px 0;
 }
 #hab {
-	margin: 0 0 50px;
+	margin: 20% 0 0;
 }
-.adobe img{
+.adobe img, .adobeResponsive img {
 	width: 60%;
 }
-
+.adobeResponsive {
+  visibility: hidden;
+  display: none;
+}
 #hab ul {
-	padding:20px 0 5px 0;
+	padding:2% 0 0 0;
 }
 li {
 	list-style-type: none;
 }
 .web {
-	margin: 10px 0 20px;
+	margin: 10px 0 0;
 }
 .web img {
 	width: 100%;
 	float: right;
 }
-
+#portfolio {
+  margin: 20% 0 0;
+}
+#portfolio h1 {
+  margin:0 0 50px;
+}
 h1 {
 	font-family: Just Another Hand !important;
 }
@@ -176,10 +185,71 @@ h1 {
 .redes {
 	margin: 30px 0px 100px;
 }
-@media(min-width:0px) and (max-width:768px) {
+.redes img:hover {
+  border-bottom: 6px solid #f2d82c;
+}
+#svgResponsive, #svgTipoResponsive {
+  visibility: hidden;
+}
+.foquito img {
+  visibility: hidden;
+  display: none;
+}
+@media(min-width:0px) and (max-width:800px) {
 	#mainNav {
 		width: 100%;
-		height: 100%;
-		padding: 40px 0px;
+		height: 800px;
+    position: relative;
 	}
+  #svgResponsive {
+    visibility: visible;
+    margin: 10% 0%;
+    position: absolute;
+    top: 200px;
+    
+  }
+  #svg {
+    visibility: hidden;
+    display: none;
+  }
+  #svg #Capa_1 {
+    width: 90%;
+  }
+  .nav ul {
+    background-color: #2d3538;
+    position: fixed;
+    bottom: 510px;
+    top: 0px;
+    left:0px;
+    font-size: 17px;
+    z-index: 1000;
+  }
+  .navegador li {
+    padding-top: 10px;
+
+  }
+  .foquito img {
+    visibility: visible;
+    display: inline-block;
+  }
+  #svgTipo {
+    display: none;
+    visibility: hidden;
+  }
+  #svgTipoResponsive svg {
+    visibility: visible;
+    position: relative;
+    left: -35%;
+  }
+  .elscroll img {
+    display: none;
+  }
+  .adobeResponsive {
+    visibility: visible;
+    display: inline-block;
+    padding: 0px;
+  }
+  .adobe {
+    display: none;
+  }
 }
