--- a/css/style.css
+++ b/css/style.css
@@ -194,14 +194,15 @@ h1 {
 @media(min-width:0px) and (max-width:800px) {
 	#mainNav {
 		width: 100%;
-		height: 800px;
-    position: relative;
+		height: 600px;
+    position: static;
 	}
   .nav ul {
+    background-color: #2d3538;
     position: fixed;
-    bottom: 310px;
+    bottom: 545px;
     width: 100%;
-    font-size: 30px;
+    font-size: 20px;
   }
   .navegador li {
     display: inline-block;
