--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,37 @@
-#mainNav {
-	background-color: #2d3538;
-  position: fixed;
-	width: 50%;
-	height: 100%;
-	padding: 40px 0px;
+.skrollr-body {
+  position: absolute;
 }
-.nav ul {
+.main {
+  background: #2d3538;
+  position: absolute;
+  width: 100%;
+  height: 3079px;
+  padding: 40px 0px;
+}
+.uno {
+  background: url(../img/uno.png) repeat fixed; 
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+.dos {
+  background: url(../img/dos.png) repeat fixed; 
+  height: 100%;
+}
+.navbar ul {
 	position: relative;
-	bottom: 310px;
-	width: 100%;
+  top: 340px;
+	width: 50%;
 	font-size: 30px;
 }
-.navegador li {
+.navbar li {
 	display: inline-block;
 	margin-right: 5%;
 }
-.navegador a {
+.navbar a {
 	color: #f2d82c;
 }
-.navegador a:hover {
+.navbar a:hover {
 	color: #99cc99;
 	border-bottom: 2px solid #f2d82c;
 	text-decoration: none;
@@ -185,54 +198,65 @@ h1 {
 .redes {
 	margin: 30px 0px 100px;
 }
-.redes img:hover {
-  border-bottom: 6px solid #f2d82c;
+.redes img {
+  padding: 5px;
 }
-#svgResponsive, #svgTipoResponsive {
+.redes img:hover {
+  border-right: 6px solid #f2d82c;
+  border-radius: 100%;
+}
+.imgResponsive  {
   visibility: hidden;
 }
+.navbar-default {
+  background-color: transparent;
+  border: transparent;
+}
+
 @media(min-width:0px) and (max-width:800px) {
-	#mainNav {
+	.main {
 		width: 100%;
-		height: 600px;
-    position: static;
+		height: 100%;
+    position: relative;
+    
 	}
-  .nav ul {
+  .skrollr-body {
+    position: relative;
+  }
+  .navbar-default {
     background-color: #2d3538;
-    position: fixed;
-    bottom: 545px;
+  }
+  .navbar ul {
+    position: relative;
+    top: 0px;
     width: 100%;
+    padding-left: 0px;
     font-size: 20px;
   }
-  .navegador li {
+  .navbar li {
     display: inline-block;
-    margin-right: 5%;
+    text-align: left;
   }
-  #svgResponsive {
-    visibility: visible;
-    margin: 10% 0%;
-    position: absolute;
-    top: 200px;
-    
-  }
+  
   #svg {
-    visibility: hidden;
     display: none;
-  }
-  #svg #Capa_1 {
-    width: 90%;
   }
   #svgTipo {
     display: none;
-    visibility: hidden;
   }
-  #svgTipoResponsive svg {
+  .imgResponsive {
     visibility: visible;
     position: relative;
-    left: -35%;
+  }
+  .imgResponsive img {
+    width: 50%;
+    padding: 150px 0px;
   }
   .elscroll img {
     display: none;
+  }
+  #aboutMe p {
+    padding: 10px 20px 0;
   }
   .adobeResponsive {
     visibility: visible;
