--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 .uno {
   background: url(../img/uno.png) repeat fixed; 
-  height: 100%;
+  height: 700px;
   padding: 0;
   margin: 0;
 }
@@ -212,9 +212,11 @@ h1 {
 		width: 100%;
 		height: 100%;
     position: relative;
-    z-index: 1000;
-    
+    z-index: 1000; 
 	}
+  .uno {
+    display: none;
+  }
   .body {
     position: relative;
   }
